    although you should delete existing sessions when upgrading from 0.6.x.
  - ``webhelpers.pylonslib.minify`` contains enhanced versions of
    ``javascript_link`` and ``stylesheet_link`` to minify (shrink) files for
    more efficient transmission.  (EXPERIMENTAL: tests fail in
    unfinished/disabled_test_pylonslib_minify.py; see
    http://pylonshq.com/project/pylonshq/ticket/466 .)
* Delete deprecated subpackages: rails.
* Delete other deprecated subpackages: commands, hinclude, htmlgen, pagination.

0.6.4 (12/2/2008)
* text(), password(), checkbox(), textarea(), and select() have a
  magic 'id attribute. If not specified it defaults to the name. To suppress
  the ID entirely, pass ``id=""``.  This is to help set the ID for title().
  radio() doesn't do this because it generates the ID another way.  hidden()
  doesn't because hidden fields aren't used with labels.
* Bugfixes in mt.select(): 
  - selected values not being passed as list.
  - allow currently-selected value to be a long.
* Delete experimental module webhelpers.html.form_layout.

0.6.3 (10/7/2008)
* Bugfix in distribute() found by Randy Syring.
* New helpers title() and required_legend() in webhelpers.html.tags.
* New directory webhelpers/public for static files
* Suggested stylesheet webhelpers/public/stylesheets/webhelpers.css
  (You'll have to manually add this to your application.)

0.6.2 (10/2/2008)
* nl2br() and format-paragraphs were not literal-safe.
* webhelpers.converters:
  - New helper transpose() to turn a 2D list sideways (making the rows columns
    and the columns rows).
* webhelpers.markdown:
  - Upgrade to Markdown 1.7.
  - Add a warning about escaping untrusted HTML to 
    webhelpers.html.converters.markdown() docstring.
  - Did not include Markdown's extensions due to relative import issues.
    Use the full Markdown package if you want footnotes or RSS.
* webhelpers.media:
  - New module for muiltimedia helpers.  Initial functions determine the size